# CLIche

./: .gitignore  CHANGELOG.md  COMMAND_TEST_LIST.md  DOCS_README.md  DOC_GEN_IMPROVEMENT.md  KNOWN_ISSUES.md  README.md  SCRAPE_TESTS.md  cliche-text-art.txt  environment.yml  install.sh  pyproject.toml  requirements.txt  setup.py  setup_dev_env.sh
cliche/: __init__.py  core.py
cliche/commands/: ask.py  chat.py  code.py  config.py  file.py  forget.py  forget.py.new  memory.py  memory.py.new  registry.py  remember.py  research.py  scrape.py  system.py
cliche/memory/: __init__.py  __init__.py.new  config.py  factory.py  manager.py  memory.py  types.py  utils.py
cliche/memory/_archive/: categorization.py  embeddings.py  enhanced.py  extraction.py  graph.py  memory.py  memory_enhanced.py  provider.py  temp_memory.py
cliche/memory/_archive/stores/: __init__.py  base.py  chroma.py  sqlite.py
cliche/memory/embeddings/: __init__.py  base.py  factory.py  ollama.py
cliche/memory/vector_stores/: __init__.py  base.py  chroma.py  factory.py
cliche/providers/: anthropic.py  deepseek.py  google.py  ollama.py  openai.py  openrouter.py
cliche/utils/: __init__.py  docker.py  gpu.py  memory.py
cliche_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: KNOWN_ISSUES.md  MEMORY_CLEANUP_PLAN.md  MEMORY_ERROR_HANDLING.md  MEMORY_IMPLEMENTATION_PLAN.md  MEMORY_README.md  MEMORY_SYSTEM_REDESIGN.md  README.md  RESEARCH_COMMAND_README.md  SCRAPE_COMMAND_README.md
docs/memory/: CHROMA_IMPLEMENTATION.md  EMBEDDINGS_IMPLEMENTATION.md  MEMORY_IMPLEMENTATION.md  MEMORY_IMPLEMENTATION_PLAN.md  README.md
tools/: clean_memory_system.py  clear_memory_db.py  test_memory_commands.py  test_memory_infrastructure.py  test_memory_manager.py  test_profile.py
tools/memory_check/: README.md  check_memories.py  quick_check.sh
